--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^14.1.3",
     "@angular/router": "^14.1.3",
     "bootstrap": "^5.2.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
     "ngx-slick-carousel": "^0.6.0",
     "rxjs": "~7.4.0",
