--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.2.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "ngx-pagination": "^6.0.2",
     "ngx-slick-carousel": "^0.6.0",
     "rxjs": "~7.4.0",
     "slick-carousel": "^1.8.1",
